# deta_py

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: linting.yml  tests.yml
deta_py/: __init__.py  base.py  utils.py
deta_py/deta_base/: __init__.py  async_base.py  base.py  queries.py  results.py  types.py  utils.py
tests/: __init__.py  test_base.py
tests/base/: __init__.py  conftest.py  test_async_base.py  test_base.py  utils.py
